package br.edu.matriculas.modelo;

public enum StatusDisciplina {
    PENDENTE,
    ATIVA,
    CANCELADA
}
