package br.edu.matriculas.modelo;

public enum StatusMatricula {
    ATIVA,
    CANCELADA
}
