package br.edu.matriculas.modelo;

public enum TipoMatricula {
    OBRIGATORIA,
    OPTATIVA
}
