package br.edu.matriculas.servico;

import br.edu.matriculas.modelo.Aluno;
import br.edu.matriculas.modelo.Disciplina;

public class SistemaCobrancasImpl implements SistemaCobrancas {

    @Override
    public void notificarMatricula(Aluno aluno, Disciplina disciplina) {
        // TODO: integrar com o sistema de cobranças real (fora do escopo)
        throw new UnsupportedOperationException("TODO");
    }
}
